Lesstof 23-10 aangepast en verwerk form veranderd

--- a/23-10-2023-les.md
+++ b/23-10-2023-les.md
@@ -18,7 +18,31 @@ E-mail: <input type="text" name="email"><br>
 </form>
 ```
 ## Post en Get methoden
+### Get methode
+De GET methode kan worden gebruikt als er geen formulier nodig is of gewenst is.
+In de URL kan je dan een variabele meegeven (bijvoorbeeld test.nl?var=123).
+In de php code van die pagina kan je dan het volgende gebruiken om de informatie te laten zien:
+```php 
+<?php
+echo $_GET['var'];
+?>
+```
+De 'var' wat hier staat, refereert dus naar de variabele die in de URL is meegegeven.
 
+### Post methode
+De post methode is handig als er een formulier is wat gevalideerd moet worden
+Bezoekers van de site kunnen dat niet zo makkelijk aanpassen als de get. Immers bij de GET methode kunnen ze de 
+variabele gewoon aanpassen.
+
+Om de post te laten zien op de pagina, kan je het volgende gebruiken. Ik gebruik het voorbeeld van de code
+die hierbove is benoemd:
+
+```php
+<?php
+echo $_POST['email'];
+?>
+```
+De 'email' verwijst dus naar de naam die gegeven is aan het text veld.
 ## De [validate](https://www.w3schools.com/php/php_form_validation.asp) mogelijkheden
 We willen het ingevulde formulier gaan valideren. Dit gaan we doen middels PHP.
 Het is wel mogelijk om dat via HTML ook te controleren, maar dat gebeurd aan de bezoekerskant. Dit kan ervoor zorgen dat de validatie omzeilt kan worden.
@@ -27,11 +51,83 @@ Via PHP is dat haast niet mogelijk.
 https://www.w3schools.com/php/php_form_required.asp
 
 ### Code compleet
-volgt nog
+Voorbeeld van een formulier op contact.php:
+
+```html
+<!-- De header, nav etc is hier weggelaten -->
+ <form method="POST" action="verwerk.php">
+    <table>
+    <tr>
+      <td class="width-250">Voornaam:</td>
+      <td><input type="text" name="voornaam" required></td>
+    </tr>
+    <tr>
+      <td class="width-250">Achternaam:</td>
+      <td><input type="text" name="achternaam"></td>
+    </tr>
+    <tr>
+      <td class="width-250">E-mail:</td>
+      <td><input type="email" name="email" required></td>
+    </tr>
+    <tr>
+      <td class="width-250">datum:</td>
+      <td><input type="date" name="datum" required></td>
+    </tr>
+    <tr>
+      <td class="width-250">Je bericht:</td>
+      <td><textarea name="bericht"></textarea></td>
+    </tr>
+    <tr>
+      <td colspan="2"><input type="submit" value="Verzenden"></td>
+    </tr>
+  </table>
+    </form>
+<!-- ook de footer e.d. -->
+```
+
+De verwerk.php als voorbeeld:
+```php
+
+<?php
+//Definieer de variabelen als leeg.
+$voornaam = $achternaam =$email=$bericht= "";
+//Als er iets gepost is (de knop is ingedrukt)
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+//Vul de variabelen met de juiste inhoud.
+//TODO: Controleer of de waardes gevuld zijn en niet leeg.
+    $voornaam = ($_POST['voornaam']);
+    $achternaam = ($_POST['achternaam']);
+    $email = ($_POST['email']);
+    $datum = $_POST['datum'];
+    $bericht = ($_POST['bericht']);
+}
+//Anders proberen ze iets wat niet mag
+else{
+    //En stuur je ze terug naar het contact formulier.
+    header("Location: contact.php");
+}
+
+//Pas deze variabelen aan per nieuwe pagina.
+    $title= "Mijn portfolio website!";
+    $header ="Welkom bij mijn portfolio site!";
+    include("includes/head.inc.php");
+    include("includes/nav.inc.php");
+?>
+    <main style="border: 6px double rgb(136, 210, 136);">
+<?php
+print_r($_POST);
+//TODO: Verwerk inhoud naar een excel bestand 
+//Todo: Mail klant.
+?>
+    </main>
+<?php
+    include("includes/footer.inc.php");
+?>
+```
 
 # Opdrachten deze lessen
 Zorg voor een contactformulier met een aantal velden waaronder voornaam, achternaam emailadres en een textarea.
 
-Zorg ervoor dat de data die gestuurd wordt 
+Zorg ervoor dat de data die gestuurd wordt op de verwerk.php word weergegeven.
 
 Succes en tot volgende les!
