--- a/30-10-2023-les.md
+++ b/30-10-2023-les.md
@@ -1,133 +1,162 @@
 # Uitleg van les 30-10-2023
 
-Tijdens deze les hebben we een contactformulier gemaakt.
-Eerst gezorgd dat er in HTML de juiste formuliervelden zijn aangemaakt waarna we het op een andere pagina gaan controleren.
+Tijdens deze les zijn we bezig geweest met het valideren van ons contactformulier.
+De methode van HTML-validatie (met bijvoorbeeld ``` required``` tag)
 
-## Wat zijn [formulieren](https://www.w3schools.com/php/php_forms.asp)
-Formulieren zijn vooraf ingestelde velden die in de HTML TAG <form> ingesloten zijn. 
-Denk hierbij aan een input type="text"  wat zorgt dat er een veld zichtbaar gemaakt word op de pagina.
-Een input type="password" geeft een invulveld text waar de tekens veranderd worden door ***
+De validatie gaan we nu op de contactpagina zelf uitvoeren. Dit om ervoor te zorgen dat het formulier getoond blijft
+en de bezoeker dus de fouten kan herstellen indien nodig.
+## Validatie op input
+In onderstaande code staat ook met commentaar beschreven wat er gebeurt.
 
-### Voorbeeld formulier
-Een voorbeeld van een simpel formulier kan er zo uitzien. Dit is een voorbeeld van contact.php
-```html
-<form action="welcome.php" method="post">
-Name: <input type="text" name="name"><br>
-E-mail: <input type="text" name="email"><br>
-<input type="submit">
-</form>
-```
-## Post en Get methoden
-### Get methode
-De GET methode kan worden gebruikt als er geen formulier nodig is of gewenst is.
-In de URL kan je dan een variabele meegeven (bijvoorbeeld test.nl?var=123).
-In de php code van die pagina kan je dan het volgende gebruiken om de informatie te laten zien:
-```php 
-<?php
-echo $_GET['var'];
-?>
-```
-De 'var' wat hier staat, refereert dus naar de variabele die in de URL is meegegeven.
-
-### Post methode
-De post methode is handig als er een formulier is wat gevalideerd moet worden
-Bezoekers van de site kunnen dat niet zo makkelijk aanpassen als de get. Immers bij de GET methode kunnen ze de 
-variabele gewoon aanpassen.
-
-Om de post te laten zien op de pagina, kan je het volgende gebruiken. Ik gebruik het voorbeeld van de code
-die hierbove is benoemd:
 
 ```php
 <?php
-echo $_POST['email'];
+//Pas deze variabelen aan per nieuwe pagina.
+    $title= "Neem contact op!";
+    $header ="Vul onderstaand formulier in :)";
+    include("includes/head.inc.php");
+    include("includes/nav.inc.php");
+   // BEGIN Validatie formulier
+//Definieer de variabelen als leeg.
+$voornaam = $achternaam =$email=$bericht=$error= "";
+//Definieer de variabele dat het formulier standaard zichtbaar moet zijn.
+$showform = true;
+//Een variabel om te tellen hoeveel fouten er zijn.
+$errorCount = 0;
+
+//Als er iets gepost is (de knop is ingedrukt)
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+//Vul de variabelen met de juiste inhoud.
+    $voornaam = ($_POST['voornaam']);
+    $achternaam = ($_POST['achternaam']);
+    $email = ($_POST['email']);
+    $bericht = ($_POST['bericht']);
+
+    //Controleer of een variabele nog leeg is.
+
+    if(empty($voornaam)){
+        //Maak een error variabele aan voor de voornaam
+        $errorVoornaam = "Voornaam is leeg!";
+        $errorCount++;
+    }
+    //Valideer of ingevulde data gelijk is aan wat ik als developer wil dat het is.
+    if($voornaam == "Cees"){
+        $error .= "Naam is Cees!<br/>";
+        $errorCount++;
+    }
+
+    if($errorCount == 0){
+        $showform = false;
+    }
+}
 ?>
 ```
-De 'email' verwijst dus naar de naam die gegeven is aan het text veld.
-## De [validate](https://www.w3schools.com/php/php_form_validation.asp) mogelijkheden
-We willen het ingevulde formulier gaan valideren. Dit gaan we doen middels PHP.
-Het is wel mogelijk om dat via HTML ook te controleren, maar dat gebeurd aan de bezoekerskant. Dit kan ervoor zorgen dat de validatie omzeilt kan worden.
-Via PHP is dat haast niet mogelijk.
 
-https://www.w3schools.com/php/php_form_required.asp
 
 ### Code compleet
 Voorbeeld van een formulier op contact.php:
 
-```html
-<!-- De header, nav etc is hier weggelaten -->
- <form method="POST" action="verwerk.php">
-    <table>
-    <tr>
-      <td class="width-250">Voornaam:</td>
-      <td><input type="text" name="voornaam" required></td>
-    </tr>
-    <tr>
-      <td class="width-250">Achternaam:</td>
-      <td><input type="text" name="achternaam"></td>
-    </tr>
-    <tr>
-      <td class="width-250">E-mail:</td>
-      <td><input type="email" name="email" required></td>
-    </tr>
-    <tr>
-      <td class="width-250">datum:</td>
-      <td><input type="date" name="datum" required></td>
-    </tr>
-    <tr>
-      <td class="width-250">Je bericht:</td>
-      <td><textarea name="bericht"></textarea></td>
-    </tr>
-    <tr>
-      <td colspan="2"><input type="submit" value="Verzenden"></td>
-    </tr>
-  </table>
-    </form>
-<!-- ook de footer e.d. -->
-```
-
-De verwerk.php als voorbeeld:
 ```php
 
 <?php
+//Pas deze variabelen aan per nieuwe pagina.
+    $title= "Neem contact op!";
+    $header ="Vul onderstaand formulier in :)";
+    include("includes/head.inc.php");
+    include("includes/nav.inc.php");
+   // BEGIN Validatie formulier
 //Definieer de variabelen als leeg.
-$voornaam = $achternaam =$email=$bericht= "";
+$voornaam = $achternaam =$email=$bericht=$error= "";
+$showform = true;
+$errorCount = 0;
+
 //Als er iets gepost is (de knop is ingedrukt)
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
 //Vul de variabelen met de juiste inhoud.
-//TODO: Controleer of de waardes gevuld zijn en niet leeg.
     $voornaam = ($_POST['voornaam']);
     $achternaam = ($_POST['achternaam']);
     $email = ($_POST['email']);
-    $datum = $_POST['datum'];
+//    $datum = $_POST['datum'];
     $bericht = ($_POST['bericht']);
-}
-//Anders proberen ze iets wat niet mag
-else{
-    //En stuur je ze terug naar het contact formulier.
-    header("Location: contact.php");
+
+    //Controleer of een variabele nog leeg is.
+
+    if(empty($voornaam)){
+        //Maak een error variabele aan voor de voornaam
+        $errorVoornaam = "Voornaam is leeg!";
+        $errorCount++;
+    }
+    if(empty($achternaam)){
+        //Gebruik de standaard error variabele.
+        $error .= "Achternaam is leeg! <br/>";
+        $errorCount++;
+    }
+    if(empty($email)){
+        $error .= "Email is  niet leeg!<br/>";
+        $errorCount++;
+    }
+    //Valideer of ingevulde data gelijk is aan wat ik als developer wil dat het is.
+    if($voornaam == "Cees"){
+        $error .= "Naam is Cees!<br/>";
+        $errorCount++;
+    }
+
+    if($errorCount == 0){
+        $showform = false;
+    }
 }
 
-//Pas deze variabelen aan per nieuwe pagina.
-    $title= "Mijn portfolio website!";
-    $header ="Welkom bij mijn portfolio site!";
-    include("includes/head.inc.php");
-    include("includes/nav.inc.php");
+
 ?>
-    <main style="border: 6px double rgb(136, 210, 136);">
-<?php
-print_r($_POST);
-//TODO: Verwerk inhoud naar een excel bestand 
-//Todo: Mail klant.
-?>
-    </main>
+<main style="border: 6px double rgb(136, 210, 136);">
+    <?=$error;?> <?=$errorCount;?>
+    <?php
+    //Controleer of showform nog true is (dus of er zijn fouten die gefixt moeten worden)
+    //Of het is de 1e keer dat de pagina geladen.
+    if($showform == true)
+    {
+    ?>
+    <form method="POST">
+        <table>
+        <tr>
+          <td class="width-250">Voornaam:</td>
+          <td><input type="text" name="voornaam" value="<?=$_POST['voornaam'] ??""?>" > <?=$errorVoornaam;?></td>
+        </tr>
+        <tr>
+          <td class="width-250">Achternaam:</td>
+          <td><input type="text" name="achternaam" value="<?=$_POST['achternaam'] ??"";?>" ></td>
+        </tr>
+        <tr>
+          <td class="width-250">E-mail:</td>
+          <td><input type="email" name="email" value="<?=$_POST['email'] ??"";?>" ></td>
+        </tr>
+    <!--    <tr>-->
+    <!--      <td class="width-250">datum:</td>-->
+    <!--      <td><input type="date" name="datum" required></td>-->
+    <!--    </tr>-->
+        <tr>
+          <td class="width-250">Je bericht:</td>
+          <td><textarea name="bericht"></textarea></td>
+        </tr>
+        <tr>
+          <td colspan="2"><input type="submit" value="Verzenden"></td>
+        </tr>
+      </table>
+    </form>
+        <?php
+    }
+    else
+    {
+     echo "Bedank voor het invullen van de site.";
+    }
+        ?>
+</main>
 <?php
     include("includes/footer.inc.php");
 ?>
 ```
 
 # Opdrachten deze lessen
-Zorg voor een contactformulier met een aantal velden waaronder voornaam, achternaam emailadres en een textarea.
-
-Zorg ervoor dat de data die gestuurd wordt op de verwerk.php word weergegeven.
+Zorg ervoor dat de data wordt gevalideerd en dat er een melding komt 
 
 Succes en tot volgende les!
